// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkIconList > renders empty when no chainIds provided 1`] = `<DocumentFragment />`;

exports[`NetworkIconList > renders multiple network logos in list 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center ml-[0px] w-[var(--c-w)] h-[var(--c-h)] bg-transparent rounded-[var(--c-rounded)] overflow-hidden z-[var(--c-z)]"
      style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px; --c-rounded: 6.047999999999999px; --c-z: 2;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
        style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
          data-testid="network-logo-1"
          style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 0px;"
        >
          <div
            class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style="object-fit: contain; width: 13px; height: 13px;"
          >
            <div
              class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
              style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
            />
            <img
              alt=""
              class="css-accessibilityImage-9pa8cd"
              draggable="false"
              src="mock-asset-ETHEREUM_LOGO.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center ml-[var(--c-ml)] w-[var(--c-w)] h-[var(--c-h)] bg-transparent rounded-[var(--c-rounded)] overflow-hidden z-[var(--c-z)]"
      style="--c-ml: -4.319999999999999px; --c-w: 14.399999999999999px; --c-h: 14.399999999999999px; --c-rounded: 6.047999999999999px; --c-z: 1;"
    >
      <svg
        aria-hidden="true"
        height="14.399999999999999"
        style="display: block;"
        width="14.399999999999999"
      >
        <defs>
          <mask
            id="_r_2_-overlap-mask"
          >
            <rect
              fill="white"
              height="14.399999999999999"
              rx="6.047999999999999"
              ry="6.047999999999999"
              width="14.399999999999999"
            />
            <rect
              fill="black"
              height="14.399999999999999"
              rx="6.047999999999999"
              ry="6.047999999999999"
              width="14.399999999999999"
              x="-10.079999999999998"
              y="0"
            />
          </mask>
        </defs>
        <foreignobject
          height="14.399999999999999"
          mask="url(#_r_2_-overlap-mask)"
          width="14.399999999999999"
          x="0"
          y="0"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
            style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
              style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-137"
                style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 0px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 13px; height: 13px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(mock-asset-POLYGON_LOGO.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="mock-asset-POLYGON_LOGO.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </foreignobject>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIconList > renders single network logo 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center ml-[0px] w-[var(--c-w)] h-[var(--c-h)] bg-transparent rounded-[var(--c-rounded)] overflow-hidden z-[var(--c-z)]"
      style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px; --c-rounded: 6.047999999999999px; --c-z: 1;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
        style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
          data-testid="network-logo-1"
          style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 0px;"
        >
          <div
            class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style="object-fit: contain; width: 13px; height: 13px;"
          >
            <div
              class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
              style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
            />
            <img
              alt=""
              class="css-accessibilityImage-9pa8cd"
              draggable="false"
              src="mock-asset-ETHEREUM_LOGO.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIconList > renders stacked network logos 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center ml-[0px] w-[var(--c-w)] h-[var(--c-h)] bg-transparent rounded-[var(--c-rounded)] overflow-hidden z-[var(--c-z)]"
      style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px; --c-rounded: 6.047999999999999px; --c-z: 3;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
        style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
          data-testid="network-logo-1"
          style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 0px;"
        >
          <div
            class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style="object-fit: contain; width: 13px; height: 13px;"
          >
            <div
              class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
              style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
            />
            <img
              alt=""
              class="css-accessibilityImage-9pa8cd"
              draggable="false"
              src="mock-asset-ETHEREUM_LOGO.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center ml-[var(--c-ml)] w-[var(--c-w)] h-[var(--c-h)] bg-transparent rounded-[var(--c-rounded)] overflow-hidden z-[var(--c-z)]"
      style="--c-ml: -4.319999999999999px; --c-w: 14.399999999999999px; --c-h: 14.399999999999999px; --c-rounded: 6.047999999999999px; --c-z: 2;"
    >
      <svg
        aria-hidden="true"
        height="14.399999999999999"
        style="display: block;"
        width="14.399999999999999"
      >
        <defs>
          <mask
            id="_r_0_-overlap-mask"
          >
            <rect
              fill="white"
              height="14.399999999999999"
              rx="6.047999999999999"
              ry="6.047999999999999"
              width="14.399999999999999"
            />
            <rect
              fill="black"
              height="14.399999999999999"
              rx="6.047999999999999"
              ry="6.047999999999999"
              width="14.399999999999999"
              x="-10.079999999999998"
              y="0"
            />
          </mask>
        </defs>
        <foreignobject
          height="14.399999999999999"
          mask="url(#_r_0_-overlap-mask)"
          width="14.399999999999999"
          x="0"
          y="0"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
            style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
              style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-42161"
                style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 0px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 13px; height: 13px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="mock-asset-ARBITRUM_LOGO.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </foreignobject>
      </svg>
    </div>
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center ml-[var(--c-ml)] w-[var(--c-w)] h-[var(--c-h)] bg-transparent rounded-[var(--c-rounded)] overflow-hidden z-[var(--c-z)]"
      style="--c-ml: -4.319999999999999px; --c-w: 14.399999999999999px; --c-h: 14.399999999999999px; --c-rounded: 6.047999999999999px; --c-z: 1;"
    >
      <svg
        aria-hidden="true"
        height="14.399999999999999"
        style="display: block;"
        width="14.399999999999999"
      >
        <defs>
          <mask
            id="_r_1_-overlap-mask"
          >
            <rect
              fill="white"
              height="14.399999999999999"
              rx="6.047999999999999"
              ry="6.047999999999999"
              width="14.399999999999999"
            />
            <rect
              fill="black"
              height="14.399999999999999"
              rx="6.047999999999999"
              ry="6.047999999999999"
              width="14.399999999999999"
              x="-10.079999999999998"
              y="0"
            />
          </mask>
        </defs>
        <foreignobject
          height="14.399999999999999"
          mask="url(#_r_1_-overlap-mask)"
          width="14.399999999999999"
          x="0"
          y="0"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
            style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
              style="--c-w: 14.399999999999999px; --c-h: 14.399999999999999px;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-10"
                style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 0px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 13px; height: 13px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(mock-asset-OPTIMISM_LOGO.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="mock-asset-OPTIMISM_LOGO.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </foreignobject>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
